--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@prismicio/client": "^4.0.0",
-    "@stripe/stripe-js": "^1.13.2",
-    "axios": "^0.21.1",
-    "faunadb": "^4.1.2",
+    "@stripe/stripe-js": "^1.21.1",
+    "axios": "^0.24.0",
+    "faunadb": "^4.4.1",
     "next": "10.0.9",
-    "next-auth": "^3.13.3",
+    "next-auth": "^3.29.0",
     "prismic-dom": "^2.2.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -26,7 +26,7 @@
     "@testing-library/dom": "^7.31.2",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
-    "@types/next-auth": "3.7.1",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^14.14.35",
     "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.3",
